# OHCA-RL

./: .gitignore  README.md  SITE_INSTRUCTIONS.md  pyproject.toml  run_external_validation.bat  run_external_validation.sh  run_pipeline.bat  run_pipeline.sh
code/: 00_cohort_identification.py  01_create_wide_df.py  01_sofa_calculator.py  02_create_wide_df.py  02_med_processing_and_actions.py  02_sofa_calculator.py  03_ffill_and_bucketing.py  04_create_tableone.py  04_prepare_training_data.py  05_figures.py  06_training.py  07_external_validation.py  08_visualize_results.py  09_combined_dashboard.py  README.md  tmp_weight_timing_analysis.ipynb  utils.py
config/: config_template.json  ohca_rl_config.yaml
