[project]
name = "ohca-rl"
version = "0.1.0"
description = "Out-of-Hospital Cardiac Arrest Reinforcement Learning"
requires-python = ">=3.10"
dependencies = [
    "marimo",
    "pandas==2.3.2",
    "duckdb==1.4.0",
    "pyarrow==21.0.0",
    "matplotlib",
    "tabulate",
    "pytz",
    "pyyaml",
    "numpy",
    "sqlglot",
    "scikit-learn",
    "clifpy==0.3.9",
    "jupyter",
    "torch",
    "statsmodels",
]

[tool.hatch.build.targets.wheel]
packages = ["code"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
